--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.12.0",
+    "react-to-print": "^3.0.5",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.4.0",
